End of the 6th chapter

--- a/lib/raffley_web/controllers/rule_html/index.html.heex
+++ b/lib/raffley_web/controllers/rule_html/index.html.heex
@@ -6,7 +6,7 @@
     </p>
     <ol>
         <%= for rule <- @rules do %>
-            <li><%= rule.text %></li>
+            <a href={~p"/rules/#{rule.id}"}><li><%= rule.text %></li> </a>
         <% end %>
     </ol>
 </div>
