Added liveview navigation

--- a/lib/raffley_web/components/layouts/app.html.heex
+++ b/lib/raffley_web/components/layouts/app.html.heex
@@ -6,7 +6,12 @@
       </a>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-
+      <.link navigate={~p"/raffles"}>
+      Raffles
+      </.link>
+      <.link navigate={~p"/estimator"}>
+      Estimator
+      </.link>
     </div>
   </div>
 </header>
