Added an Admin Live view.

--- a/lib/raffley_web/components/layouts/app.html.heex
+++ b/lib/raffley_web/components/layouts/app.html.heex
@@ -7,10 +7,13 @@
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
       <.link navigate={~p"/raffles"}>
-      Raffles
+        Raffles
       </.link>
       <.link navigate={~p"/estimator"}>
-      Estimator
+        Estimator
+      </.link>
+      <.link navigate={~p"/admin/raffles"}>
+        Admin
       </.link>
     </div>
   </div>
